<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_main_heading"
        style="@style/myStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_main_heading"
        android:textAlignment="center"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <TextView
            android:id="@+id/txt_about_me"
            style="@style/myStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_about_me"
            android:textSize="20sp" />
    </ScrollView>

    <TextView
        android:id="@+id/txt_main_suggestion_heading"
        style="@style/myStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_main_suggestion_heading"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <EditText
                android:id="@+id/editText"
                style="@style/myStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="11"
                android:hint="@string/editText"
                android:inputType="text"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/txt_main_suggestion"
                style="@style/myStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>